# sql-refinery

./: .claude-settings.json  .gitignore  .gitmodules  .prettierignore  .prettierrc.json  CLAUDE.md  Makefile  README.md  TODO.md  environment.yml  main.py  requirements.txt  setup.sh
.hooks/: pre-commit
backend/: pyproject.toml  requirements.txt  session.last.ndjson  setup.py
backend/src/: __init__.py  _debug.py  _recorder.py  code.py  logger.py  logic.py  model.py  server.py  session.py  sql.py  utils.py  variations.py  workspace.py
backend/tests/: conftest.py  inputs  recorder.py  sessions  test_code.json  test_code.py  test_formatting.py  test_logic.json  test_logic.py  test_pipeline.py  test_server.py  test_sessions.py  test_snapshots.py  test_sql.py  test_variations.py  update.py  utils.py
backend/tests/sessions/: 0_init.ndjson  1_code_lens.ndjson
backend/tests/snapshots/: 0_init.last.md  0_init.true.md  1_code_lens.last.md  1_code_lens.true.md  src.code.ingest.0.json  src.code.ingest.1.json  src.code.ingest.2.json  src.code.ingest_file.0.json  src.code.ingest_file.1.json  src.code.ingest_file.2.json  src.code.parse.0.json  src.code.parse.1.json  src.logic.compare.0.json  src.logic.parse.0.json  src.logic.parse.1.json  src.sql.parse.1.json  test_pipeline.last.md  test_pipeline.true.md  test_server.last.md  test_server_0_init.last.md  test_server_0_init.true.md  test_server_1_code_lens.last.md  variations.last.md  variations.true.md
backend/tests/snapshots/formatting/: exchange.last.json  exchange.true.json  output.last.md  src.code.build.1.last.json  src.code.build.1.true.json  src.model.build.1.true.json  src.sql.build.1.last.json
backend/tests/snapshots/formatting/trace/: server.last.json  workspace._index.0.last.json  workspace._map.0.last.json  workspace.layer_code.0.last.json  workspace.layer_files.0.last.json  workspace.layer_sql.0.last.json
backend/tests/snapshots/variations/: exchange.last.json  exchange.true.json  output.0.last.md  output.last.md  output.true.md  src.code.build.1.last.json  src.code.build.1.true.json  src.code.build.2.last.json  src.code.build.2.true.json  src.model.build.1.last.json  src.model.build.1.true.json  src.model.build.2.last.json  src.model.build.2.true.json  src.sql.build.1.last.json  src.sql.build.1.true.json  src.sql.build.2.last.json  src.sql.build.2.true.json  src.variations.build.1.last.json  src.variations.build.1.true.json  src.variations.build.2.last.json  src.variations.build.2.true.json
backend/tests/snapshots/variations/trace/: server.last.json  server_client.last.json  workspace._index.0.last.json  workspace._index.1.last.json  (+16 more)
backend/tests/snapshots_pipeline/: src.sql.parse.0.json  src.sql.parse.2.json
backend/tests/snapshots_server/: 0.initialize.json  1.did_open.json  2.code_lens_provider.json  3.get_text_document.json
(+95 files in other folders)
